# django_template

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: serializers.py  views.py
app/tests/: test_api.py  test_serializers.py
app/urls/: api.py  urls.py
composeexample/: celery.py
composeexample/settings/: __init__.py  djangorestframework.py  log.py  sentry.py  settings.py
composeexample/urls/: main.py
django_backend/: celery.py
django_backend/settings/: celery.py  db.py  djangorestframework.py  settings.py
django_backend/urls/: main.py
nginx/: nginx.conf
testapp/: admin.py  models.py  serializers.py  views.py
testapp/migrations/: 0001_initial.py
testapp/tests/: test_api.py  test_serializers.py
testapp/urls/: api.py  urls.py
